--- a/lab-files/04/declaration_create.j2
+++ b/lab-files/04/declaration_create.j2
@@ -9,18 +9,28 @@
         "id": "urn:uuid:33045210-3ab8-4636-9b2a-c98d22ab915d",
         "label": "Sample 1",
         "remark": "Simple HTTP Service with Round-Robin Load Balancing",
-        "{{service_name}}": {
+        "{{tenant_name}}": {
             "class": "Tenant",
             "{{app_name}}": {
                 "class": "Application",
                 "template": "generic",
                 "{{app_name}}_vs": {
-                    "class": "Service_HTTP",
+                    "class": "{{ class_template }}",
                     "label": "my application {{app_name}}",
                     "virtualAddresses": [
                         "{{vs_ip}}"
                     ],
-                    "virtualPort": {{vs_port}},
+                    {% if class_template == "Service_HTTPS" %}
+                    "virtualPort": {{vs_port | default(443)}},
+                    {% else %}
+                    "virtualPort": {{vs_port | default(80)}},
+                    {% endif %}
+                    {% if class_template == "Service_HTTPS" %}
+                    "serverTLS": "{{ app_name}}_clientssl_profile",
+                    {% if SSL_OFFLOAD == "False" %}
+                    "clientTLS": "{{ app_name }}_serverssl_profile",
+                    {% endif %}
+                    {% endif %}
                     "persistenceMethods": [],
                     "pool": "{{app_name}}_pool"
                 },
@@ -39,7 +49,32 @@
                         }
                         {% endfor %}
                     ]
-                }
+                },
+                {% if class_template == "Service_HTTPS" %}
+                "{{ app_name }}_clientssl_profile": {
+                    "class": "TLS_Server",
+                        "certificates": [
+                            {
+                                "certificate": "client_cert",
+                                    "matchToSNI": ""
+                            }
+                        ]
+                },
+                "client_cert": {
+                    "class": "Certificate",
+                    "certificate": "bigip": "/Common/default.crt"
+                },
+                {% if SSL_OFFLOAD == "False" %}
+                "{{ app_name }}_serverssl_profile": {
+                    "class": "TLS_Client",
+                    "clientCertificate":"server_cert"
+                },
+                "server_cert": {
+                    "class": "Certificate",
+                    "certificate": {"bigip": "/Common/default.crt"}
+                },
+                {% endif %}
+                {% endif %}
             }
         }
     }
