--- a/lab-files/04/declaration_create.j2
+++ b/lab-files/04/declaration_create.j2
@@ -44,7 +44,7 @@
                         {% for member in groups['webserver']%}
                         {{comma()}}
                         {
-                            "serverAddresses":['{{hostvars[member]['node_ip']}}'],
+                            "serverAddresses":["{{hostvars[member]['node_ip']}}"],
                             "servicePort":{{hostvars[member]['mem_port']}}
                         }
                         {% endfor %}
