--- a/lab-files/04/declaration_create.j2
+++ b/lab-files/04/declaration_create.j2
@@ -31,6 +31,11 @@
                     "clientTLS": "{{ app_name }}_serverssl_profile",
                     {% endif %}
                     {% endif %}
+                    {% if class_template == "Service_HTTPS" %}
+                    {% if vs_port == 80 %}
+                    "redirect80"="false"
+                    {% endif %}
+                    {% endif %}
                     "persistenceMethods": [],
                     "pool": "{{app_name}}_pool"
                 },
