--- a/lab-files/04/declaration_create.j2
+++ b/lab-files/04/declaration_create.j2
@@ -33,7 +33,7 @@
                     {% endif %}
                     {% if class_template == "Service_HTTPS" %}
                     {% if vs_port == 80 %}
-                    "redirect80"="false"
+                    "redirect80"="false",
                     {% endif %}
                     {% endif %}
                     "persistenceMethods": [],
