--- a/lab-files/05/declaration_create.j2
+++ b/lab-files/05/declaration_create.j2
@@ -15,7 +15,7 @@
                 "class": "Application",
                 "template": "generic",
                 {% set comma1 = joiner(",") %}
-                {% for app in groups['apps'] %}
+                {% for app_name in groups['apps'] %}
                 {{comma1()}}
                 "{{app_name}}_vs": {
                     "class": "{{ class_template }}",
@@ -49,7 +49,7 @@
                     ],
                     "members": [
                         {% set comma2 = joiner(",") %}
-                        {% for member in groups[app]%}
+                        {% for member in groups[app_name]%}
                         {{comma2()}}
                         {
                             "serverAddresses":["{{hostvars[member]['node_ip']}}"],
