--- a/lab-files/05/declaration_create.j2
+++ b/lab-files/05/declaration_create.j2
@@ -17,32 +17,32 @@
                 {% set comma1 = joiner(",") %}
                 {% for app in groups['apps'] %}
                 {{comma1()}}
-                "{{[app]['app_name']}}_vs": {
-                    "class": "{{ [app]['class_template'] }}",
-                    "label": "my application {{[app]['app_name']}}",
+                "{{hostvars[app]['app_name']}}_vs": {
+                    "class": "{{ hostvars[app]['class_template'] }}",
+                    "label": "my application {{hostvars[app]['app_name']}}",
                     "virtualAddresses": [
-                        "{{[app]['vs_ip']}}"
+                        "{{hostvars[app]['vs_ip']}}"
                     ],
                     {% if class_template == "Service_HTTPS" %}
-                    "virtualPort": {{[app]['vs_port'] | default(443)}},
+                    "virtualPort": {{hostvars[app]['vs_port'] | default(443)}},
                     {% else %}
-                    "virtualPort": {{[app]['vs_port'] | default(80)}},
+                    "virtualPort": {{hostvars[app]['vs_port'] | default(80)}},
                     {% endif %}
-                    {% if [app]['class_template'] == "Service_HTTPS" %}
-                    "serverTLS": "{{[app]['app_name']}}_clientssl_profile",
-                    {% if [app]['SSL_OFFLOAD'] == "False" %}
-                    "clientTLS": "{{[app]['app_name']}}_serverssl_profile",
+                    {% if hostvars[app]['class_template'] == "Service_HTTPS" %}
+                    "serverTLS": "{{hostvars[app]['app_name']}}_clientssl_profile",
+                    {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
+                    "clientTLS": "{{hostvars[app]['app_name']}}_serverssl_profile",
                     {% endif %}
                     {% endif %}
-                    {% if [app]['class_template'] == "Service_HTTPS" %}
-                    {% if [app]['vs_port'] == 80 %}
+                    {% if hostvars[app]['class_template'] == "Service_HTTPS" %}
+                    {% if hostvars[app]['vs_port'] == 80 %}
                     "redirect80": false,
                     {% endif %}
                     {% endif %}
                     "persistenceMethods": [],
-                    "pool": "{{[app]['app_name']}}_pool"
+                    "pool": "{{hostvars[app]['app_name']}}_pool"
                 },
-                "{{[app]['app_name']}}_pool": {
+                "{{hostvars[app]['app_name']}}_pool": {
                     "class": "Pool",
                     "monitors": [
                         "http"
@@ -58,8 +58,8 @@
                         {% endfor %}
                     ]
                 },
-                {% if [app]['class_template'] == "Service_HTTPS" %}
-                "{{ [app]['app_name'] }}_clientssl_profile": {
+                {% if hostvars[app]['class_template'] == "Service_HTTPS" %}
+                "{{ hostvars[app]['app_name'] }}_clientssl_profile": {
                     "class": "TLS_Server",
                         "certificates": [
                             {
@@ -72,8 +72,8 @@
                     "class": "Certificate",
                     "certificate": {"bigip": "/Common/default.crt"}
                 },
-                {% if [app]['SSL_OFFLOAD'] == "False" %}
-                "{{ [app]['app_name'] }}_serverssl_profile": {
+                {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
+                "{{ hostvars[app]['app_name'] }}_serverssl_profile": {
                     "class": "TLS_Client",
                     "clientCertificate":"server_cert"
                 },
