--- a/lab-files/05/declaration_delete.j2
+++ b/lab-files/05/declaration_delete.j2
@@ -9,7 +9,7 @@
         "id": "urn:uuid:33045210-3ab8-4636-9b2a-c98d22ab915d",
         "label": "Sample 1",
         "remark": "Simple HTTP Service with Round-Robin Load Balancing",
-        "{{service_name}}": {
+        "{{tenant_name}}": {
             "class": "Tenant"
         }
     }
