--- a/lab-files/06/declaration_create.j2
+++ b/lab-files/06/declaration_create.j2
@@ -71,8 +71,7 @@
                 },
                 "{{ hostvars[app]['app_name'] }}_client_cert": {
                     "class": "Certificate",
-                    "certificate": {"bigip": "{{hostvars[app]['ext_cert']}}.crt"},
-                    "privateKey": {"bigip": "{{hostvars[app]['ext_cert']}}.key"}
+                    "certificate": {"bigip": "{{hostvars[app]['ext_cert']}}.crt"}
                 }
                 {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
                 ,
@@ -82,8 +81,7 @@
                 },
                 "{{ hostvars[app]['app_name'] }}_server_cert": {
                     "class": "Certificate",
-                    "certificate": "{"bigip": {{hostvars[app]['int_cert']}}.crt"},
-                    "privateKey": "{"bigip": {{hostvars[app]['int_cert']}}.key"}
+                    "certificate": "{"bigip": {{hostvars[app]['int_cert']}}"}
                 }
                 {% endif %}
                 }
