--- a/lab-files/06/declaration_create.j2
+++ b/lab-files/06/declaration_create.j2
@@ -72,7 +72,7 @@
                 "{{ hostvars[app]['app_name'] }}_client_cert": {
                     "class": "Certificate",
                     "certificate": {"bigip": "{{hostvars[app]['ext_cert']}}"},
-                    "privateKey": "{"bigip": {{hostvars[app]['int_cert']}}.key"}
+                    "privateKey": {"bigip": {{hostvars[app]['int_cert']}}.key"}
                 }
                 {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
                 ,
@@ -82,8 +82,8 @@
                 },
                 "{{ hostvars[app]['app_name'] }}_server_cert": {
                     "class": "Certificate",
-                    "certificate": "{"bigip": {{hostvars[app]['int_cert']}}"},
-                    "privateKey": "{"bigip": {{hostvars[app]['int_cert']}}.key"}
+                    "certificate": {"bigip": {{hostvars[app]['int_cert']}}"},
+                    "privateKey": {"bigip": {{hostvars[app]['int_cert']}}.key"}
                 }
                 {% endif %}
                 }
