--- a/lab-files/06/declaration_create.j2
+++ b/lab-files/06/declaration_create.j2
@@ -30,7 +30,7 @@
                     {% endif %}
                     {% if hostvars[app]['class_template'] == "Service_HTTPS" %}
                     "serverTLS": "{{hostvars[app]['app_name']}}_clientssl_profile",
-                    {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
+                    {% if hostvars[app]['SSL_OFFLOAD'] == False %}
                     "clientTLS": "{{hostvars[app]['app_name']}}_serverssl_profile",
                     {% endif %}
                     {% endif %}
@@ -72,9 +72,9 @@
                 "{{ hostvars[app]['app_name'] }}_client_cert": {
                     "class": "Certificate",
                     "certificate": {"bigip": "{{hostvars[app]['ext_cert']}}"},
-                    "privateKey": {"bigip": {{hostvars[app]['int_cert']}}.key"}
+                    "privateKey": {"bigip": "{{hostvars[app]['int_cert']}}.key"}
                 }
-                {% if hostvars[app]['SSL_OFFLOAD'] == "False" %}
+                {% if hostvars[app]['SSL_OFFLOAD'] == False %}
                 ,
                 "{{ hostvars[app]['app_name'] }}_serverssl_profile": {
                     "class": "TLS_Client",
@@ -82,8 +82,8 @@
                 },
                 "{{ hostvars[app]['app_name'] }}_server_cert": {
                     "class": "Certificate",
-                    "certificate": {"bigip": {{hostvars[app]['int_cert']}}"},
-                    "privateKey": {"bigip": {{hostvars[app]['int_cert']}}.key"}
+                    "certificate": {"bigip": "{{hostvars[app]['int_cert']}}"},
+                    "privateKey": {"bigip": "{{hostvars[app]['int_cert']}}.key"}
                 }
                 {% endif %}
                 }
